--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             </div>
             
                <div id="btn">
-                <button onclick="saveLogin(event)">Sign Up</button>
+                <button onclick="saveLogin(event)">Login</button>
                </div>
 
             <p>Not Register? <a href="index.html">Create Account</a></p>
